--- a/IdentityAppFromEmpty/Views/_ViewImports.cshtml
+++ b/IdentityAppFromEmpty/Views/_ViewImports.cshtml
@@ -1,2 +1,2 @@
-﻿@using IdentityAppFromEmpty.ViewModels.Account
+﻿@using IdentityAppFromEmpty.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
