--- a/IdentityAppFromEmpty/Views/Shared/_Layout.cshtml
+++ b/IdentityAppFromEmpty/Views/Shared/_Layout.cshtml
@@ -8,6 +8,10 @@
     <script type="text/javascript" src="~/lib/jquery/jquery.min.js"></script>
 </head>
 <body class="m-1 p-1">
+    @if (User?.IsInRole("Admins") ?? false)
+    {
+        <a asp-action="Index" asp-controller="Account" class="btn btn-secondary" style="float: left">Список пользователей</a>
+    }
     @if (User?.Identity?.IsAuthenticated ?? false)
     {
         <a asp-action="Logout" asp-controller="Account" class="btn btn-secondary" style="float: right">Выйти</a>
