--- a/LogsAndStrategy/Views/Home/Index.cshtml
+++ b/LogsAndStrategy/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         }
     </ul>
     <div>Count: @Model.Count</div>
-    <form method="post" asp-action="AddItem" asp-controller="Home">
+    <form method="post" asp-action="PostItem" asp-controller="Home">
         <input type="submit" value="Add new"/>
     </form>
 </div>
