--- a/LogsAndStrategy/Views/Home/Index.cshtml
+++ b/LogsAndStrategy/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
     </ul>
     <div>Count: @Model.Count</div>
     <form method="post" asp-action="PostItem" asp-controller="Home">
+        <input type="hidden" name="Name" value="@Guid.NewGuid()" />
         <input type="submit" value="Add new"/>
     </form>
 </div>
